syntax = "proto3";

package proto;
option go_package = "./v1;pb";
import "google/api/annotations.proto";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse) {
        option (google.api.http) = {
             post: "/v1/example/echo"
             body: "*"
        };
    }
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}